--- a/dashboard.html
+++ b/dashboard.html
@@ -39,7 +39,7 @@
         </li>
         <hr class="nav-divider">
         <li class="nav-item">
-          <a class="nav-link" href="#">Logout</a>
+          <a class="nav-link" href="index.html">Logout</a>
         </li>
       </ul>
 <!--
