--- a/dashboard.html
+++ b/dashboard.html
@@ -23,8 +23,8 @@
   <section>
     <nav class="navbar">
       <div class="navbar-brand">
-          <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
-          <h1 class="navbar-brand-text">CHURCH</h1>
+        <img class="navbar-brand-logo" src="https://cdn-icons-png.flaticon.com/512/739/739249.png" alt="Web application logo">
+        <h1 class="navbar-brand-text">CHURCH</h1>
       </div>
 
       <ul class="navbar-nav">
@@ -37,22 +37,92 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Activities</a>
         </li>
-        <hr class="nav-divider">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Logout</a>
-        </li>
       </ul>
-<!--
-      <div class="nav-item">
-        <a class="nav-link" href="index.html">Logout</a>
-      </div> -->
 
+      <div class="logout-container">
+        <hr class="nav-divider">
+        <a class="nav-link" href="index.html">Logout</a>
+      </div>
     </nav>
   </section>
 
-  <div class="">
+  <main class="content">
+    <header class="section-header">
+      <h2 class="section-heading">Dashboard</h2>
+    </header>
 
-  </div>
+    <div class="event-overview">
+      <span class="event-overview-box">
+        <h4 class="secondary-texts">Wedding</h4>
+        <p class="event-counter"><strong>###</strong></p>
+      </span>
+
+      <hr class="event-divider">
+
+      <span class="event-overview-box">
+        <h4 class="secondary-texts">Baptismal</h4>
+        <p class="event-counter"><strong>###</strong></p>
+      </span>
+
+      <hr class="event-divider">
+
+      <span class="event-overview-box">
+        <h4 class="secondary-texts">Youth Activities</h4>
+        <p class="event-counter"><strong>###</strong></p>
+      </span>
+
+      <hr class="event-divider">
+
+      <span class="event-overview-box">
+        <h4 class="secondary-texts">Anniversaries</h4>
+        <p class="event-counter"><strong>###</strong></p>
+      </span>
+    </div>
+
+    <div class="side-to-side">
+      <div class="dashboard-box">
+        <div class="dashboard-box-header">
+          <h3 class="dashboard-box-heading">Events</h3>
+        </div>
+
+        <div class="dashboard-box-data">
+          <span class="side-to-side">
+            <p>Today</p>
+            <p>###</p>
+          </span>
+          <span class="side-to-side">
+            <p>Incoming</p>
+            <p>###</p>
+          </span>
+          <span class="side-to-side">
+            <p>Total</p>
+            <p>###</p>
+          </span>
+        </div>
+      </div>
+
+      <div class="dashboard-box">
+        <div class="dashboard-box-header">
+          <h3 class="dashboard-box-heading">Activities</h3>
+        </div>
+
+        <div class="dashboard-box-data">
+          <span class="side-to-side">
+            <p>Today</p>
+            <p>###</p>
+          </span>
+          <span class="side-to-side">
+            <p>Incoming</p>
+            <p>###</p>
+          </span>
+          <span class="side-to-side">
+            <p>Total</p>
+            <p>###</p>
+          </span>
+        </div>
+      </div>
+    </div>
+  </main>
 
 
   <!-- Font Awesome -->
