--- a/verified.html
+++ b/verified.html
@@ -35,7 +35,7 @@
 
       <div class="popup-body">
         <p class="popup-description">Your email was successfully verified.</p>
-        <a class="btn-neutral" href="dashboard.html">Continue</a>
+        <a class="btn btn-neutral" href="dashboard.html">Continue</a>
       </div>
     </div>
   </section>
