--- a/verify-email.html
+++ b/verify-email.html
@@ -35,14 +35,14 @@
       <hr>
 
       <div class="popup-body">
-        <p class="popup-description">We've sent an email to xxxxxxxxx@gmail.com to verify your email address and activate your account. Enter the confirmation code we sent to your email. Resend Code</p>
+        <p class="popup-description">We've sent an email to xxxxxxxxx@gmail.com to verify your email address and activate your account. Enter the confirmation code we sent to your email. <strong><a href="verify-email.html" class="clickable-text">Resend Code</a></strong></p>
         <!-- Uncomment form when passing the project -->
         <!-- <form class="" action="verified.html" method="post"> -->
           <input class="input" type="email" name="resetPassEmail" value="" placeholder="Insert confirmation code">
 
           <div class="popup-action-btns">
             <!-- Remove onclick if to be passed -->
-            <input class="btn-submit" type="submit" name="" value="Submit" onclick="window.location.href = 'verified.html';">
+            <input class="btn btn-submit" type="submit" name="" value="Submit" onclick="window.location.href = 'verified.html';">
             <a href="index.html" class="btn-secondary">Back to Log In</a>
           </div>
         <!-- </form> -->
