organize file structure

--- a/html/authentication/verified.html
+++ b/html/authentication/verified.html
@@ -6,7 +6,7 @@
   <title>CHURCH</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../../css/styles.css">
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
 
   <!-- Background Image -->
   <div class="background-image-container">
-    <img class="background-image" src="images/background.png" alt="Church background image">
+    <img class="background-image" src="../../images/background.png" alt="Church background image">
   </div>
 
   <!-- Verify Account  -->
@@ -35,7 +35,7 @@
 
       <div class="popup-body">
         <p class="popup-description">Your email was successfully verified.</p>
-        <a class="btn btn-neutral" href="dashboard.html">Continue</a>
+        <a class="btn btn-neutral" href="../dashboard.html">Continue</a>
       </div>
     </div>
   </section>
