--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="login-2ndhalf col-6">
         <!-- <div class="login-form-container"> -->
           <!-- Uncomment form when passing the project -->
-          <!-- <form class="" action="dashboard.html" method="post"> -->
+          <!-- <form class="" action="html/dashboard.html" method="post"> -->
             <label for="usernameInput">Username</label>
             <input class="input" type="text" id="usernameInput" name="username" placeholder="Insert your Username here">
             <label for="passwordInput">Password</label>
@@ -51,7 +51,7 @@
               <input class="input" type="text" id="captchaInput" name="captcha" placeholder="Insert Captcha text">
             </span>
             <!-- Remove onclick if to be passed -->
-            <input class="input btn btn-submit" type="submit" name="login" value="Log In" onclick="window.location.href = 'dashboard.html';">
+            <input class="input btn btn-submit" type="submit" name="login" value="Log In" onclick="window.location.href = 'html/dashboard.html';">
             <div class="login-options">
               <div class="">
                 <input type="checkbox" id="rememberInput" name="rememberMe" value="">
@@ -80,7 +80,7 @@
 
       <div class="popup-body">
         <!-- Uncomment form when passing the project -->
-        <!-- <form class="" action="verify-email.html" method="post"> -->
+        <!-- <form class="" action="html/authentication/verify-email.html" method="post"> -->
           <div class="side-to-side">
             <div class="half-of-whole">
               <label for="">Last Name</label>
@@ -107,7 +107,7 @@
 
           <div class="popup-action-btns">
             <!-- Remove onclick if to be passed -->
-            <input class="btn btn-submit" type="submit" name="" value="Sign Up" onclick="window.location.href = 'verify-email.html';">
+            <input class="btn btn-submit" type="submit" name="" value="Sign Up" onclick="window.location.href = 'html/authentication/verify-email.html';">
             <p class="btn-secondary" onclick="togglePopup('signup')">Back to Log In</p>
           </div>
         <!-- </form> -->
