--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -6,7 +6,7 @@
   <title>CHURCH</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
 
   <!-- FONTS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
