added contact for user in base.html

--- a/base.html
+++ b/base.html
@@ -39,10 +39,20 @@
         </li>
       </ul>
 
-      <div class="logout-container">
+      <!-- Uncomment For Admin -->
+      <!-- <div class="bottom-navbar-container">
         <hr class="nav-divider">
         <a class="nav-link" href="index.html">Logout</a>
-      </div>
+      </div> -->
+
+      <!-- Uncomment For User -->
+      <!-- <address class="bottom-navbar-container">
+        <div class="address">
+          <p>For inquiries chuchu:</p>
+          <strong class="contact">0909090909</strong>
+          <strong class="contact">email@gmail.com</strong>
+        </div>
+      </address> -->
     </nav>
   </section>
 
@@ -52,6 +62,9 @@
     </header>
 
     <!-- Insert Codes Here -->
+
+
+    <!-- ************************ -->
 
   </main>
 
