--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -41,7 +41,7 @@
 
       <div class="logout-container">
         <hr class="nav-divider">
-        <a class="nav-link" href="index.html">Logout</a>
+        <a class="nav-link" href="../index.html">Logout</a>
       </div>
     </nav>
   </section>
