--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -39,9 +39,9 @@
         </li>
       </ul>
 
-      <div class="logout-container">
+      <div class="bottom-navbar-container">
         <hr class="nav-divider">
-        <a class="nav-link" href="../index.html">Logout</a>
+        <a class="nav-link" href="index.html">Logout</a>
       </div>
     </nav>
   </section>
