events index and user home wip

--- a/html/authentication/verified.html
+++ b/html/authentication/verified.html
@@ -27,7 +27,7 @@
   <section class="container-center" id="verified">
     <div class="popup">
       <div class="popup-header">
-        <i class="fa-solid fa-shield-halved popup-icon"></i>
+        <i class="fa-solid fa-shield-halved icon"></i>
         <h2 class="popup-heading">Email Verified</h2>
       </div>
 
