--- a/html/authentication/verify-email.html
+++ b/html/authentication/verify-email.html
@@ -28,7 +28,7 @@
   <section class="container-center">
     <div class="popup">
       <div class="popup-header">
-        <i class="fa-solid fa-shield-halved popup-icon"></i>
+        <i class="fa-solid fa-shield-halved icon"></i>
         <h2 class="popup-heading">Verify Your Account</h2>
       </div>
 
@@ -43,7 +43,7 @@
           <div class="popup-action-btns">
             <!-- Remove onclick if to be passed -->
             <input class="btn btn-submit" type="submit" name="" value="Submit" onclick="window.location.href = 'verified.html';">
-            <a href="index.html" class="btn-secondary">Back to Log In</a>
+            <a href="../../index.html" class="btn-secondary">Back to Log In</a>
           </div>
         <!-- </form> -->
 
