--- a/base.html
+++ b/base.html
@@ -46,23 +46,26 @@
       </div> -->
 
       <!-- Uncomment For User -->
-      <!-- <address class="bottom-navbar-container">
+      <address class="bottom-navbar-container">
         <div class="address">
           <p>For inquiries chuchu:</p>
           <strong class="contact">0909090909</strong>
           <strong class="contact">email@gmail.com</strong>
         </div>
-      </address> -->
+      </address>
     </nav>
   </section>
 
-  <main class="content">
-    <header class="section-header">
+  <main class="content" style="padding: 0;">
+    <!-- <header class="section-header">
       <h2 class="section-heading">Page Title</h2>
-    </header>
+    </header> -->
+
+    <div class="">
+      <img src="https://media-public.canva.com/MADQ4xTu4OA/1/screen.jpg" alt="Church" style="width: 100%; height: 400px; object-fit: cover;">
+    </div>
 
     <!-- Insert Codes Here -->
-
 
     <!-- ************************ -->
 
