--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -29,10 +29,10 @@
 
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Dashboard</a>
+          <a class="nav-link" href="dashboard.html">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
+          <a class="nav-link" href="events/index.html">Events</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Activities</a>
