--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <label for="captchaInput">Enter CAPTCHA</label>
             <img src="" alt="captcha text" style="display: block; height: 3rem;">
             <span class="captcha-input">
-              <i class="fa-solid fa-arrow-rotate-right btn-refresh-captcha"></i>
+              <i class="fa-solid fa-arrow-rotate-right icon"></i>
               <input class="input" type="text" id="captchaInput" name="captcha" placeholder="Insert Captcha text">
             </span>
             <!-- Remove onclick if to be passed -->
