updated tabkes actions, such as select all, select row, and check box

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="events/index.html">Events</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Activities</a>
+          <a class="nav-link" href="activities/index.html">Activities</a>
         </li>
       </ul>
 
