--- a/base.html
+++ b/base.html
@@ -46,20 +46,20 @@
       </div> -->
 
       <!-- Uncomment For User -->
-      <address class="bottom-navbar-container">
+      <!-- <address class="bottom-navbar-container">
         <div class="address">
           <p>For inquiries chuchu:</p>
           <strong class="contact">0909090909</strong>
           <strong class="contact">email@gmail.com</strong>
         </div>
-      </address>
+      </address> -->
     </nav>
   </section>
 
   <main class="content" style="padding: 0;">
-    <!-- <header class="section-header">
+    <header class="section-header">
       <h2 class="section-heading">Page Title</h2>
-    </header> -->
+    </header>
 
     <div class="">
       <img src="https://media-public.canva.com/MADQ4xTu4OA/1/screen.jpg" alt="Church" style="width: 100%; height: 400px; object-fit: cover;">
@@ -70,7 +70,6 @@
     <!-- ************************ -->
 
   </main>
-
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/4de3040dc0.js" crossorigin="anonymous"></script>
